@@ -1,3 +1,12 @@
+2013-11-30  Ramon Casero  <rcasero@gmail.com>
+
+	* Add matlab/ThirdPartyToolbox/sphereFit.m:
+
+	- this fits a sphere to a collection of data using a closed form
+	for the solution. by Nikolai Chernov.
+
+	http://www.mathworks.com/matlabcentral/fileexchange/22643
+
 2013-11-29  Ramon Casero  <rcasero@gmail.com>
 
 	* CMakeLists.txt: (0.6.0)
